# CP-CA

./: README.md
CP-DCA/IF-CRAX/Affine-Degree2/: CMakeLists.txt  README.md  Result_CRAX64_key0.txt  (+1 more)
CP-DCA/SE-CRAX/: CMakeLists.txt  README.md  Result_CRAX64_key0.txt  Result_CRAX64_key1.txt
CP-DCA/SE-SPECK128-K256/: CMakeLists.txt  README.md  Result_SPECK128.txt
CP-DCA/SE-SPECK32-K64/: CMakeLists.txt  README.md  Result_SPECK32.txt
CP-DCA/SE-SPECK48-K96/: CMakeLists.txt  README.md
CP-DCA/SE-SPECK64-K128/: CMakeLists.txt  README.md  Result_SPECK64.txt
CP-DCA/SE-SPECK64-K128/test/: default_white_box_speck_64_K128.c
CP-DCA/SE-SPECK96-K144/: CMakeLists.txt  README.md  Result_SPECK96.txt
CP-DCA/Simulation/: CMakeLists.txt  README.md  Result_SPECK128.txt  Result_SPECK32.txt  Result_SPECK64.txt
CP-LEA/SE-CRAX/: README.md  Result_CRAX64_key0.txt  Result_CRAX64_key1.txt  SE_default_white_box_crax.c
CP-LEA/SE-SPECK128-K256/: README.md  Result_SPECK128.txt  default_white_box_speck_128_K256.c
CP-LEA/SE-SPECK32-K64/: README.md  Result_SPECK32.txt  default_white_box_speck_32_K64.c
CP-LEA/SE-SPECK48-K96/: README.md  Result_SPECK48.txt  default_white_box_speck_48_K96.c
CP-LEA/SE-SPECK64-K128/: README.md  Result_SPECK64.txt  default_white_box_speck_64_K128.c
CP-LEA/SE-SPECK96-K144/: README.md  Result_SPECK96.txt  default_white_box_speck_96_K144.c
CP-LEA/Simulation/: CMakeLists.txt  README.md  Result_SPECK128.txt  Result_SPECK32.txt  Result_SPECK64.txt
CP-LEA/Simulation/include/: wbspeck.h
CP-LEA/Simulation/src/: wbspeck.c
CP-LEA/Simulation/test/: attack.c
(+53 files in other folders)
